--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-next",
+  "name": "loja-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.26.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
