--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.26.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "lucide-react": "^0.256.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
